# nyro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_SUMMARY.txt  MUSICIAN_STREAMS_QUICK_START.md  PROFILE_SETUP_SUMMARY.md  README.md  ROADMAP.md  openapi_api4redis.yaml  pyproject.toml  redis-cli-wrapper.sh  requirements.txt  setup.cfg
.claude/: assembly-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/workflows/: ci.yml  pypi-publish.yml  workflow.yml
archive/issues/gerico1007-nyro-issue-13/: ECHOTHREADS_ENHANCEMENT_PROPOSAL.md
archive/issues/gerico1007-nyro-issue-14/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  aws-deploy.sh  docker-compose.yml  gerico1007-nyro-issue-14.code-workspace
archive/issues/gerico1007-nyro-issue-15/: ISSUE_CONTEXT.md  (+1 more)
courses/python/: 01-getting-started.ipynb  02-redis-streams-tutorial.ipynb  README.md
docker/: Dockerfile  Makefile  docker-compose.yml  validate-setup.sh
docs/: CONTRIBUTING.md  DOCKER_REDIS_TUTORIAL.md  INSTALLATION.md  LOCATION_STREAM_ISSUE.md  MUSICIAN_STREAMS_SETUP.md  SECURITY.md  STREAMS.md  STREAM_SYSTEMS_GUIDE.md  TUTORIAL.md  for_william.md  python-package.md
gerico1007-nyro-issue-13/: ISSUE_CONTEXT.md  QUICK_SETUP.sh  setup.py
gerico1007-nyro-issue-13/testing/: MUSICAL_LEDGER.json
gerico1007-nyro-issue-14/: DEPLOYMENT_GUIDE.md  Dockerfile  ISSUE_CONTEXT.md  README.md  assembly_session_melody.abc  docker-compose.yml
gerico1007-nyro-issue-14/.claude/: assembly-config.json
gerico1007-nyro-issue-14/scripts/: init-repos.sh
gerico1007-nyro-issue-14/workspace/: README.md
gerico1007-nyro-issue-15/: README.md
gerico1007-nyro-issue-16/: README.md  assembly_session_melody.abc
gerico1007-nyro-issue-16/.claude/: assembly-config.json
gerico1007-nyro-issue-16/testing/: ASSEMBLY_LEDGER.md
gerico1007-nyro-issue-17/: TUTORIAL.md  activate_ssh_agent.sh  assembly_session_melody.abc  ssh_fix_plan.sh
gerico1007-nyro-issue-17/.claude/: assembly-config.json
gerico1007-nyro-issue-17/testing/: ASSEMBLY_LEDGER.md
gerico1007-nyro-issue-18/: ISSUE_CONTEXT.md  README.md
gerico1007-nyro-issue-18/testing/: ASSEMBLY_LEDGER.md
ledger/: assistant-ledger.md
mobile-termux/: .env.swp  QUICK_START.md  README.md  WALKING_TUTORIAL.md  create-full-payload.sh  create-walk.sh  env.example  install.sh  redis-mobile.sh  redis-rest.sh  synth-launch.sh  test-quick-scan.sh  test-scanner.sh  upload-files.sh
mobile-termux/testing/: TESTING_LEDGER.md  TESTING_LEDGER.txt
nyro/: __main__.py  cli.py  config.py
nyro/core/: client.py
nyro/musical/: ledger.py
requirements/: README.md  base.txt  cli-requirements.txt  system-requirements.txt  test.txt
sample/: wf.musicxml
scripts/: README.md  del-key.sh  example-redis-script.sh  get-key.sh  init-monitor-portal-stream.sh  init-musician-streams.sh  install.sh  menu.sh  monitor-streams.sh  music-menu.sh  push-list.sh  read-list.sh  redis-cli-wrapper.sh  scan-garden.sh  send-instruction.sh  send-monitor-instruction.sh  set-key.sh  setup-env.sh  show-by-location.sh  stream-add.sh  stream-read.sh  test-stream.sh
sessionABC/: a.abc  assembly_session_melody.abc  assembly_session_melody_session_250706_001813.abc  redis_session_story_current.abc
testing/: MUSICAL_LEDGER.json  MUSICAL_LEDGER.json.backup
tests/: test_cli.py  test_cli_commands.py  test_cli_init.py
(+16 files in other folders)
