[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyro"
version = "1.0.2"
authors = [
  { name = "Gerico Tremblay", email = "gerico@jgwill.com" },
]
description = "A command-line tool for AI phase navigation, creative anchoring, and recursive guidance."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.0",
  "redis>=4.0",
  "requests>=2.28",
  "pydantic>=1.8",
  "pydantic-settings>=2.0",
]

[project.scripts]
nyro = "nyro.cli:cli"

[project.urls]
Homepage = "https://github.com/Gerico1007/nyro"
Repository = "https://github.com/Gerico1007/nyro"
Issues = "https://github.com/Gerico1007/nyro/issues"