[metadata]
name = nyro
version = 0.1.0
description = Nyro: AI phase navigator, creative anchor, and recursive guide.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
url = https://github.com/youruser/nyro

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    nyro = nyro.cli:cli