[metadata]
name = nyro
version = 1.0.2
description = Nyro: AI phase navigator, creative anchor, and recursive guide.
long_description = file: README.md
long_description_content_type = text/markdown
author = Gerico Tremblay 
author_email = gerico@jgwill.com
license = MIT
url = https://github.com/gerico1007/nyro

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    nyro = nyro.cli:cli